Fixed list spacing.

--- a/index.css
+++ b/index.css
@@ -1,11 +1,11 @@
 @font-face {
     font-family: 'Young Serif Regular';
-    src: url("assets/fonts/young-serif/YoungSerif-Regular.ttf");
+    src: url('assets/fonts/young-serif/YoungSerif-Regular.ttf');
 }
 
 @font-face {
     font-family: 'Oufit Regular';
-    src: url("assets/fonts/outfit/Outfit-VariableFont_wght.ttf");
+    src: url('assets/fonts/outfit/Outfit-VariableFont_wght.ttf');
 }
 
 * {
@@ -37,7 +37,11 @@ img {
     border-radius: 12px;
 }
 
-h1, h2, h3, p, li {
+h1,
+h2,
+h3,
+p,
+li {
     line-height: 100%;
     letter-spacing: 0;
 }
@@ -61,48 +65,40 @@ h3 {
     color: rgba(122, 40, 78, 1);
 }
 
-p, li {
+p,
+li {
     font-size: 16px;
     line-height: 150%;
     color: rgba(95, 86, 77, 1);
 }
 
-ul, ol {
+li {
+    padding-left: 8px;
+}
+
+ul,
+ol {
     display: flex;
     flex-direction: column;
     gap: 8px;
-    padding-left: 20px;
+    padding-left: 24px;
 }
 
-ul {
-    list-style: none;
-    padding-left: 8px;
-}
-
-ul li::before {
-    content: '•';
-    display: inline-block;
-    width: 16px;
-    margin-right: 16px;
-    color: rgba(133, 70, 50, 1);
-}
-
-ol {
-    margin-left: 8px;
-    padding-left: 8px;
-    list-style-position: outside;
-}
-
+ul ::marker,
 ol ::marker {
-    font-weight: 700;
     color: rgba(133, 70, 50, 1);
+    font-weight: 700;
 }
+
 
 hr {
     color: rgba(227, 221, 215, 1);
 }
 
-.prep-time-sect, .ingredients-sect, .instructions-sect, .nutrition-sect {
+.prep-time-sect,
+.ingredients-sect,
+.instructions-sect,
+.nutrition-sect {
     display: flex;
     flex-direction: column;
     gap: 24px;
